Ed Burke Transcription

--- a/_pages/podcast-episodes/ep-012.md
+++ b/_pages/podcast-episodes/ep-012.md
@@ -11,5 +11,136 @@ source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/012-Ed-Burke.
 show: false
 ---
 
-<i> Coming Soon </i>
 
+Dave: Hello, and welcome to the podcast. I'm your host in the show, I talked about technology building a company as a CTO, and co-founder and have guests to discuss their roles in technology and entrepreneurship.
+Dave: Today, I'm joined by Ed Burke, the CEO and sole founder of Roomigo. Hi Ed, thanks for joining me. I really appreciate it.
+
+Ed: It's great to be here. Thanks very much for having me. 
+
+Dave: Great! To begin, how about you tell us a little bit about you and your background.
+
+Ed: Sure. So I'm an Irish tech entrepreneur. I did a business and law degree in UCD, graduation in 2007. And, and I was always very interested in entrepreneurship. However, I decided to start my career and in the law, partly because I thought law would be a good skill to have in a business world and also it enabled me to travel internationally. So I got a job at a law firm in London. And while I was there I was working in a, I worked in Moscow for some time as well. So I started off my career in in London, as I was saying, and prior to law job, I actually worked in Shanghai for a while and Shanghai, gave me a taste for, for Asian, Asian Asian business. So 2012, I decided I'd like to go back to Asia for a few years to get more experience working in the Asian markets. Because it's obviously the markets out there are huge and they're emerging so I thought that's a good thing to do. So I spent a few years living in Singapore and while I was in Singapore, I was working full time but I still had this entrepreneur, artists desire, within me to be an entrepreneur. So I was thinking about ideas, and I never I didn't have a solid idea, but I knew that I liked property. I like the real estate space. My first job was actually with a real estate developer, I really liked connecting people. 
+
+Dave: And when everybody's got to live somewhere.
+
+Ed: Everybody has to live somewhere. Exactly. And as I lived in a number of different cities throughout Europe, including and Asia including Dublin, I had always, I always needed somewhere to live, obviously. And it so happened that I was always living throughout my 20s and a house situations. And so it was never just me and my own. And that is something that I think most people in their 20s do in virtually every city, you don't just live on your own. You live in shared accommodation. So the question was always when you move to a new place you want you want to live a good flatmates. You don't want to live in nightmare flatmates and we've all had that situation. And it just means you're gonna have to go somewhere else. So you're gonna have to find somebody new sort of people with whom we never actually really kind of add to your life, right, or to the enjoyment of your life wherever you move. And an interesting thing about living as an expat, particularly in a new city. And as the youth the Global Youth workforce is more global, I'm sorry, more mobile than ever. There are more expats in different places than ever before companies do so comments, people move around, right. So people actually use their living situation also as a means to make friends. So you want your flatmates. A lot of people would want their flatmates to be more than just flatmates to actually be friends. So my business is called Roomigo. And Roomigo is all about happy people find the right flatmates with whom to live. So not just any flatmate try to find a really good flatmate. And our tagline is actually live with friends. So it's the whole concept of bringing like-minded people together and to live with a compatible housemate. So how does it work is basically people create profiles in Roomigo and those profiles that have your photo, they have a buyer. So some background information on you. And you also pick your most most important lifestyle choices and hobbies, so a lifestyle choice could be, you know, you're really quiet or your outgoing or it could be that you'd like to you know, you're a night owl, you know, you stay up working really late and get up really late. So people have different lifestyle choices, hobbies and interests, which are really important to people. And what happens is, we have these choices on on Roomigo. And this means that we can provide incredibly rich matches. And so I don't, I can't think of any other platform in the world for you're moving to a new city. And you're going to be in your 20s or maybe thirties you you're going to be living in shared accommodation. But if you're a really sporty person, you might want to, you might spend your weekends you know, playing sports and maybe watching, you know, football or rugby iin the evening. So if you're a sporty person, you might want to live it other sporting people. So Roomigo, we can actually provide these matches or pray or whether you're into yoga, whether, you know, you're a party animal, sometimes people in their mid 20s, they love to go out and party, you know, on several nights a week, so you can find these people. Whereas when you're 35, maybe you don't want to do Wednesday night parties anymore.
+
+Dave: I can totally relate to that. 
+
+Ed: So yeah, so it's all about happy people find the right match for the stage of the of their lives that they are out and just to help them have a better living situation. And then, of course, as I was saying, you go to a new city and one problem people are facing in cities as people can be quite lonely in cities they can be very lonely places, particularly if you're new to a city and when I was growing up, I grew up in a town Ireland and I knew all my neighbours and most people when I was growing up knew their neighbors I was at a young innovators events in in a Shannon last week, and it was for school kids from all over the country. And they had to present ideas which got put forward to judging panel was about as high as kids honours they're split up into teams for me skill. I'm one of the teams as I was prepping judge that came came in front of the panel I was on they had this idea about creating communities within cities, but about connecting people, which is very much Roomigo is about I found that very interesting because it was a bunch of school kids that were explaining this. So I said to to the guard who's presenting, I said, you know, why did you come up with this idea. And she said she, she, I think she had done an exchange and Milan for a few months. And they were living in an apartment block. But she said nobody knew their neighbours there. And and this is a real issue for young people, and even even old people. So then I said to everybody else on our team, and there is maybe I think there was eight or nine of them from that school. I said to everybody else do you, where do you live? Do you live in a rural area, an urban area, they mostly they mostly lived in an urban an area, and I said, Do you know your neighbours, and they said, We don't know our neighbours. And that's actually a big problem in urban living. Because people don't know our neighbours anymore. Which is another thing about amigo because we know we will have we have the housemates, we know all their interests. And not only can we help people find a right flatmates for our house. But we can also potentially have other people in the area connect, because we will know if in route mines for some reason, kind of 70% of the 25 year olds living there using Roomigo, or like yoga and want to meet up with people to do yoga. Yeah, we can actually potentially connect those those types of people as well. So you have an incredible amount of data, which, so the whole thing is about connecting people. So that's kind of an overview of what room ego does, and he is. And the idea effectively came from my experience living in high chairs around the world.
+
+Dave: Yeah, no, I can definitely see the benefits of that, beyond even your initial living situation. Even so, as a tech person, a lot of us are introverts. So at even tech meetups, where there are dozens of other tech people, most people don't strike up conversations with others who explicitly have a similar interest. So because there's too many people. So in these smaller segments, I can, I can see where that would, you know, continue to help people grow their network of people. Because once you're out of school, it's not like you acquire new friends. You you more acquire coworkers or colleagues or professional acquaintances. So that's, that's really interesting. So, if you've got most of your users here in Dublin, is that correct? Yeah.
+
+Ed: So um, so what we decided to do was, just to give you a little bit of background on the road to kind of entrepreneurship and creating a business it's very important to have a very focused idea and that there is a product market fit, that there's a need for your for your business. So when I started off I had more broad ideas initially so focused at more into this idea of helping people find it right housemates so I needed to test whether there is a demand for this, is it just me or is there actually a genuine demand. So what I did was I started off by creating Facebook groups which is almost like a free way to test this concept so within the Facebook groups and basically there were a bunch of people that are housemates so other have spare rooms, are looking for rooms, are looking for new people to team up with because that's quite common as well, you move to a new city and you you might see an two bed apartment, but you don't want to rent it on your own. So you might want to find somebody else. So within these Facebook groups people find housemates, so I started off that one in Dublin. And that was very successful. So then I, I built these Facebook groups in many other cities. So there are over 50,000 members within these Facebook groups that I manage. And Dublin been kind of been the biggest groups, I've got a very big group in Berlin as well, there are over 20,000 people not group that's growing rapidly. And, and these Facebook groups enable me to learn about the market and get a feel for what the customer wants. Because every day I am seeing endless ads go up notices basically go up and do it in the group's about people want the type of housemates they are looking for what is important to them. So that's how I started off. But the Facebook group is actually very inefficient in terms of filtering, and it has very limited options, it's you just have to keep scrolling down. And so it's very inefficient for finding that right person. But it does prove the concept of people are much more interesting to people rather than just a property. So when I, having worked in these Facebook groups for some time, identified it right. And going to build a platform and the platform is going to connect people much more easily and based in this area, interest in lifestyle choices that was in your life. So what I did was I got a platform built. So I'm a non-tech founder and for non-tech founders is actually a huge challenge to build good tech to build a right tech, you've never done it before. So you the first time you do is you really don't know what you're doing. So I started off by getting a very basic website built in Asia, I sourced to Asia. But this was kind of before I had the concept for the thought house. So that just gave me a little bit of experience with, you know, building a product. But I quickly learned that you need to have a very focused product. And it's also very important to be very close to the team of people who are building your product. So if your outsourcing a product to a foreign country is probably good to have an in-house CTO, or technical person that can manage that build carefully, because when I was doing this, it was just me managing a team people in Asia. And I kind of knew absolutely nothing about tech. So what I did then was I found a development company in Dublin that built our product, which the product that we built is very different to the initial kind of prototype that we'd worked on. And we got that into Dublin and probably Dan did was I found technical advisors who could help with the kind of overseeing process and because the team we're, we're based in Dublin, it was it was great because they were incredibly engaged in the project. And they were very passionate about it as well. So So, you know, it worked at great.
+
+Dave: Where'd you find the technical advisors?
+
+Ed: How do you find technical advisor is..
+
+Dave: Where did you find yours?
+
+Ed: Well, how I found my technical advisors, was through LinkedIn and connections so I think the way people find them as you just have to, you just have to network you have to go to events, go to tech events, meet other founders that have done it before and and you just get introductions and and are also sometimes I mean, just going on LinkedIn and reaching out to 14:56
+
+Dave: Yeah
+
+Ed: That does seem like a you know, every got to touch base it works as well. I mean, that has actually worked for me. Funnily enough the developer the built our product, he's he's in he's a great guy based in Dublin a Chinese guy I actually met him on a platform called Shapr and kind of ironically Shapr’s about connecting professionals
+
+Dace: Yeah, I've been on there before.
+
+Ed: Yeah, yeah, he goes, about connecting housemates. So, there's a similar concept the're a lots of
+
+Dave: You're a little far away from mic.
+
+Ed: Sorry, there's a similar concept there. So that's how I met our developer via Shapr under our technical advisors was made many via via contacts that I made.
+
+Dave: Cool.
+
+Ed: Tried to process. So then just to get back to your original question, we built the product and we've launched the product in June in Dublin, which is the beta product is going very well. So it's really excited about that we've got thousands of people on it now, I meant connecting, finding housemates even making new friends. So so that's where we are at the moment. And the plan is to expand outside of Ireland. And so we want to go to Berlin next.
+
+Dave: Is it limited to just Dublin? Or is it just not marketed outside of Dublin?
+
+Ed: At the moment, it's limited to Dublin. 
+
+Dave: Okay.
+
+Ed: But the plan is very much to expand that outside of Ireland. I think it's very important to expand the business quickly and not just be in one market. He said that, like, you know, people often say, you know, test the product in your first market make your mistakes there. Yes. You know, learn the a, kind of game plan for how you execute in this model. And one thing about the type of product I have, there's no point in being
+
+Dave: The only user?
+
+Ed: Yeah
+
+Dave: I'm connected with myself. Nobody else.
+
+Ed: Exactly. So there's, there's no point in saying, oh, we're going to be in Dublin, we're going to be in San Francisco and New York and 20 other cities because we could turn it on. And it could be live there, for sure there's nobody, if there's only one person in each city does absolutely no points to it. So probably we've been doing is just we've focused our already days in learning from the users in Dublin and finding out what's great about the product. What needs improvement, what needs to change. A billion up the user base here, which helps with the network connections. And then we've got a very solid core in Dublin.
+
+Dave: Cool, very cool. Being a sole founder. What's that like?
+
+Ed: Being a sole founder? 
+
+Dave: Well, I guess it's hard to answer that question. If you haven't done both.
+
+Ed: Exactly. So it's kind of hard to answer that question. Because I haven't done both. But it's very possible to do it being a sole founder, I, was very important is, you want you want to have a team at a complementary skill set. So for a tech company, you know, it would be great to have, you know, a one founder, and then maybe a CTO co-founder as well, at least. So what we've done is we found and we've got very good advisors, and the idea is data. And, you know, we bring we bring one of our advisors on board as the CTO when we've raised significant significant money to hire it and full time we make them a CTO co-founder. So, but but yeah, I mean, it's tough. But the thing is, the key thing is that you surround yourself a great team, great people, and that you have the people in place, then you can hire full time. Yeah, when you have, when you after you've raised funding.
+
+Dave: Right, so what what other than the Facebook groups? what's worked really well for you?
+
+Ed: Well, I think we also run events.
+
+Dave: Oh, yeah, that's right. You do that? Yeah, can you talk about that. 
+
+Ed: So yeah, so we we run these community focused events for happy people find other housemates and make new friends and the events, the events have worked very well for us, they're very cheap to run. So probably do is we have meetups in a pub and we invite along people on our platform to it and meet other people on the platform and it us get feedback. So we've got, for in terms of building a community and building a relationship with our users. I think the events have been great. And they've also helped us from a marketing perspective as well. Because prior to having the platform preach, we've only had since June, we didn't have a platform. So we needed to, to kind of do other things to help build our, I suppose our reputation and build up our community. So we started running these events, even before the platform. And either those events, we did get good contacts. So for example, we have the first co-living company launch in Ireland and co-living companies are residential apartment management companies, effectively, that rent out a bunch of apartments to like-minded professionals. So the whole idea of the co-living company is instead of just renting, renting out their apartments to anybody they're actually try to bring together like-minded people and are trying to create this community vibe. So the first co-living company that launched in Ireland last year actually approached us because they saw we were running these very much community focused events and so that led to great relationship with them. And you know, we got some good PR because of them as well because of the events love Dublin picked up and one of our events before we even had a platform and yeah, I just found them to be great for keeping keeping close to our community. I think for particularly for, if you have a product which is a see to see product as in consumer to consumer like Roomigo is very important to keep engage with the customer and show that you know, you're serious about solving the problem. You're serious about listening to your customers, learning what their problems and needs are. And the events are a great way to do that. Plus they go cracking a good fun as well you know, if not today problem done for a few drinks and it's always a bit of fun. 
+
+Dave: Very nice. Nice. So what didn't work out for you? What, what sort of mistakes have you made, that you could see not making if you were to try something like this again
+
+Ed: I Well, I think like the first mistake I made was, before I had a fully formulators idea or I would say an idea that was sufficiently honed into a really strong compelling product, I I kind of had half an idea and I immediately rushed off and got this website built in Asia, which is basically you know, we didn't use the website, it wasn't fit for purpose, it just didn't say it just I hadn't properly taught at the product or having properly thought out the idea so I built something that you know, probably wasn't needed or wanted. So that was a mistake, it didn't cost a huge amount of money but it costs time particularly, it cause time and time is money, time is very important in the startup world because you want to be moving fast so this certainly cost me a lot of time so that was a mistake however having said that I did learn a lot actually about how to build a product and you learn from your mistakes and I realized okay I should have thought this better in the beginning and I should have test the concept more on I should have got to the core from what I'm really trying to do and that's build. Sorry that is connect like minded housemates for I was what I've initially built was more akin to an old school property portal. So that was kind of one of the mistakes, I suppose I mean, another one of the reasons I'm a sole founder is because I got the idea to set up a business when I was in Singapore, I was living and working full time in Singapore. So I, when I came back to Ireland I, I, I, I decided writing going to run with this idea. And I started off by going to new frontiers. And when I came back to Ireland the funny thing is, when you've been kind of out of the country, for the best part of 10 years, you don't really know that many people anymore. So at that stage, like, I didn't actually know that many people. So I was like, Okay, well, I'm going to have to get to know people all over again. So, so that's kind of one of the reasons I was a sole founder, I very started again, I probably, you know, you know, it was see if I can start off whether or not a co-founder or two from the beginning, definitely, I would say, a technical person. So that was one of the reasons I started off as a sole founder. But then I thought a big challenge was finding technical people. And I guess I could have started looking for technical advisors a little earlier than I did, yeah, and I probably didn't quite appreciate the importance of having really good technical advisors behind you. So it took me a little bit longer before actually start a property searching for technical advisors. I think if I'd done that front, I immediately came back to Ireland if I've done that from the beginning, and had better, you know, had had technical advisors on board from from day one. And I think that would have made a difference, because it would have saved me a lot of time. And it was just sped up the process in terms of finding a development team and so forth.
+
+Dave: Yeah, that's one of the things we learned throughout the NDRC accelerator program is that if we made a few different decisions, things could have gone a lot faster. But how can you learn those things if you don't actually go through the process of learning them. But that's why we're here is to try to help those other people coming after us not make the same mistakes we made.
+
+Ed: It's kind of Yeah, it's funny, you say that, because the one thing I have noticed is founders tend to make the same mistakes over and over again, all the founders I speak to have, you know, they've made many of the same mistakes, I've made. So you're trying to just learn from your mistakes and not make them again, and if you can help someone else and not make the same mistakes, and that's incredible.
+
+Dave: Yeah, well, that's a, I can't remember the exact quote, but it goes something like wisdom is not repeating your own mistakes. Genius is not repeating other people's mistakes, or it goes something like,
+
+Ed: Yeah
+
+Dave: After the last year, I'm no genius, I've got some wisdom now, not a lot. I still make some of the same mistakes, but not not the big ones. So if you were to completely start over on something totally different, other than finding your technical founder, is there anything else that you might have done completely differently, or something that the, you know, your current experience would have led you to, to make different decisions.
+
+Ed: I think there's a lot of stuff I would have done differently, which I think from the tactical side I've described, I think it's, it's certainly possible to build a very basic MVP, but I've been spending a lot of money just to test whether your concept works. So you don't, you don't have to build the perfect websites on day one. That's what I initially taught my and I initially had this idea I thought, I build this brilliant website, but all the bells and whistles of a property portal. And that's not the way you're supposed to do it however the idea is, you just have to cut it back to what does it do at its absolute core and build that rather than trying to build something that all the features that you ultimately like to have. So you build something very basic. And you can do that quite easily. You could even use a WordPress website and see if you can get people to use your product or pay for something. Or even if you don't have something to sell, will they actually click on a button saying, I will buy this so that you so there, there are ways to validate an idea much more easy than I would have missed initially toss and quite quickly. So the whole thing about a startup is just you have to be very nimble, very flexible, and very open to pivoting and changing if needs be at the same time you need stubbornness. And so you don't just want to be kind of flip flopping from one idea to the other, it's very important to have a focus but just to be able to, it's, you know, to be able to get to the core of your idea much more quickly and test that.
+
+Dave: So yeah, it's I mean, it's your job in the very beginning is to validate your idea, not to not necessarily to make sales of the final product. If you can make sales in the beginning that validates your idea but you having people in those Facebook groups that were engaged that absolutely validate your idea now it's
+
+Ed: Absolutely so it just, it just kind of opened my eyes to how broken this industry is. So to think that they're literally 10s of millions of people looking for housemates right now around the world. And there's no one place that they can find those housemates stays they're on various property portals, Craigslist, you know, various Facebook groups people are people are trying to find housemates everywhere. But there's no one platform where people can go and say, I'm going to find real people on this that I can match with like-minded people. Because another one of the problems that I quickly noticed was I didn't realize this prior to starting was in this this is an industry where there are a lot of scammers. So a lot of fake accounts appear in social media and on property portal setting up fake ads. So this has led to massive breakdown of trust people moving to a new city, they go onto a website looking for a room. And I actually don't know how whether it's real room or not, because there's so many fake rooms. So so the Facebook groups are so kind of invaluable in that regard. Because the amount of, I've to moderate groups and I see that people joining the group's every day. And the amount of fake accounts I say, trying to join. It's just incredible. So I'm, of course block those. And but it really just opened my eyes to how big a problem you know, it's not just finding the right housemates are. But finding finding real people that you can trust. Yeah
+
+Dave: Yeah. Is there anything we haven't talked about that you think listeners should know that you're
+
+Ed: Well, I think you're asking me about other stuff, I would do another advice I would give. It's very important to be incredibly open-minded to kind of be open to finding mentors. Mentors are really important because mentors can give you guidance. The best mentor is our entrepreneurs that have done it before. So there's other types of mentors, like professional advisors, and so forth. But in the early days, what you really need to do is you need to talk to entrepreneurs, who have built businesses and who have created businesses, and they can give you guidance, because they've talked to hundreds of startups, thousands of startups, they've seen so many different ideas that probably heard your idea before hundred times, like so you so they will, mentors are invaluable because they can guide you, they can have focus you and and I find them to be very helpful. And there's so many great people in Dublin that are willing to help out new entrepreneurs and young entrepreneurs starting up, they understand how tough the journey is, and try to find these people and surround yourself with with these people is so so important. And it's not that difficult to find them. Because there's lots of startup events on in Dublin that you can go to, there's networking events, you can go to meetup groups, you can go to where you can meet people that could be potential mentors. So mentors in terms of people that have done it before, as an established entrepreneurs, and also surrounding yourself with kind of a peer group of startup founders too who are at your stage or a little bit ahead of you, because you're all going through the same process. So being surrounded with other young on other startup entrepreneurs, and having some mentors as well will make a huge difference. Because what you don't want to be doing is sitting at home in your bedroom, working on an idea, you know, what I was having that support group around you, which is it exists and is very, not difficult to get if you just go out and, you know, start meeting people. So that's, I think that's really important to get the mentors is, it's, that's pretty crucial.
+
+Dave: Yeah, and I'd say, you mentioned meetup groups. And I was talking about how so many of the introverts find it hard to not always, but sometimes find it hard to create conversations with complete strangers, it's a good idea to ask the organizers if maybe you could give just enlightening talk on what you're trying to do and what you're after. Usually, have never seen somebody asked to do that. And I'm not get the opportunity, you know, just I'm trying to create this product. That's solved this problem, I am looking for either technical advisors, or possibly somebody to join me and almost every single start meetup organizer is totally open to that. So that's a good way to, you know, start that instead of trying to go to every single person at a meetup and
+
+Ed: I couldn't agree more. I mean, that's a it's a great idea. I mean, I find where the meetup just from a personal perspective, like I'm not trying to meet everybody at the meetup if I can come out and meet up with one new connection, whether it's somebody that's kind of up my level, or even someone that's starting off to me that I can give some advice to, or whatever, if I can just meet one kind of new connection that has a positive influence. That's, that's, that's great. Just to try to make meaningful connections. And then what you find as well as you find your start meeting the same people over again, you know I met somebody I was at an event last night for the founders Institute, the founders institute is an idea Stage Incubator, which is something definitely worthwhile checking out because you don't need to, you can work in your job. And the founders Institute is on and evenings and it helps you develop ideas. So I was out just one of their events last night and I met a young entrepreneur, he's fresh out of college and the last time met him actually was when I was at an event in Trinity about a year ago. And it was kind of, it was exciting to see, because I remember he, him telling me about his idea year ago. And now he's kind of brought his idea forward and he's, you know, looking to work in a full time. So. So that was really interesting for me, actually, I don't think I gave him any, any useful advice. But it's fun for me to see, to see, to see, to see someone again, a year later, that they're that they had this this kind of spark of an idea. And, you know, and it's, it's just fun to see them taking it forward. And actually, he was a great guy to meet because, you know, he knows he knows all the technical students coming out of Trinity. So I was like, This is great. 
+
+Dave: You may say, you didn't help him, but sometimes just the smiling face that has validated that, yeah, that they believe in your idea is something to keep you going.
+
+Ed: Absolutely. That's so true as well. Yeah, absolutely. You can kind of feed off it, you know, positivity and people that are just, you know, kind of support your idea. And like your product. It's great to meet people like that as well. Yeah,
+
+Dave: Anything else that you want to bring up?
+
+Ed: But a kind of that's I don't think I've much more advice that. But what about yourself, you've got an incredible background, and you're, you're a technical guy. So what advice would you have for people? 
+
+Dave: Definitely. I mean, like you said, that I've seen people make the mistake of building so that's funny. I say, don't build things, okay. Because I've made that mistake. So many times I, my job is to solve problems. So I hear a problem, my brain starts trying to solve the problem immediately. So it's taken me a long time to get to the phase where it's like, is this a problem worth solving? Do we know people want it solved than it's not just something that sounds cool to work on. But then, so many people who don't have technical founders, co founders come to me asking, how should we do this, how can we outsource this, and it's really hard to do, like, we've got some remote workers, but I'm here. So I can consistently, you know, review, not just review their code, but review the direction and it's a constant iterative feedback loop, as opposed to someone like yourself, who's a business founder, who doesn't necessarily know the full process. And so the technical people go off, and then they come back weeks, months later, and it may or may not be exactly what you were looking for. And so it's find a technical advisor, even if it's just a couple of hours a month, or anything that is better than trying to just deal with an agency to build something for you, without you being directly involved. But if your core product is software, it's really hard to do something in that space without somebody who understands its offer. 
+
+Ed: So true.
+
+Dave: Yeah, I understand the reasoning thinking that you could do without it. But I it's, it's really not possible. And the same with, if you're 100% technical, and you don't think you can ever sell, then you need to find a co-founder, you can't just make something great. And hope people can find it, that doesn't work, you have to sell it, sell it to the users sell it to investors sell it to communities, it doesn't matter. You have to learn to sell or find somebody who can do that better than you can.
+
+Ed: Totally I suppose, just to add, I mean, in terms of support for startups, there are quite a lot in Ireland. And there is, if people are aware. And sometimes people that are new to the game are actually very unaware of the various support stuff that exists. So the local enterprise offices are really good to very supportive of startups, they have grants that can help you build that first product. And there is also an enterprise Ireland, they run new frontiers, new frontiers and it's a program for, you know, it's people with ideas and, and then, of course, there are accelerators, such as the NDRC. And the NDRC gives you investment to help you take your your idea to the next stage. So there are lots of supports there for you. So you just have to, to kind of start engaging with people getting out there meeting people and once you have that idea and you want to build this and it's very very possible to get it built. You don't need 100 grand say in your bank account Are you don't need investors at that stage. You can get stuff built and you can get simple stuff built and you have a plenty of support It's there to have you financially build out stuff as well. 
+
+Dave: Cool. Yeah, definitely. Alright, how can people contact you?
+
+Ed: And people can contact me at Roomigo, so my email is at www.Roomigo.io So that's R o o m i g o dot i o. 
+
+Dave: Cool. I'll post that and anything else you want in the show notes. 
+
+Ed: Thanks a million. 
+
+Dave: Thank you so much for joining us. And thank you for listening. 
+
+Until next time, remember, any sufficiently advanced technology is indistinguishable from magic.
